--- a/Horizon/Horizon/Resources/Info.plist
+++ b/Horizon/Horizon/Resources/Info.plist
@@ -2,162 +2,23 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>BGTaskSchedulerPermittedIdentifiers</key>
-	<array>
-		<string>$(PRODUCT_BUNDLE_IDENTIFIER).offline-sync</string>
-	</array>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
-	<key>CFBundleDisplayName</key>
-	<string>Canvas Career</string>
+	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
-	<string>${EXECUTABLE_NAME}</string>
-	<key>CFBundleGetInfoString</key>
-	<string></string>
-	<key>CFBundleIconName</key>
-	<string>AppIcon</string>
+	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>${PRODUCT_NAME}</string>
+	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
-	<string>APPL</string>
+	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(MARKETING_VERSION)</string>
-	<key>CFBundleSignature</key>
-	<string>????</string>
-	<key>CFBundleSpokenName</key>
-	<string>Canvas Horizon</string>
-	<key>CFBundleURLTypes</key>
-	<array>
-		<dict>
-			<key>CFBundleURLName</key>
-			<string>com.instructure.icanvas</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>canvas-courses</string>
-			</array>
-		</dict>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>db-awibvnhurx8gsox</string>
-			</array>
-		</dict>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLIconFile</key>
-			<string></string>
-			<key>CFBundleURLName</key>
-			<string>com.instructure.icanvas</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>canvas-Horizon</string>
-			</array>
-		</dict>
-		<dict>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>CFBundleURLName</key>
-			<string>pendo-pairing-horizon</string>
-			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>pendo-9f913bef</string>
-			</array>
-		</dict>
-	</array>
+	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
-	<key>Domain Service URLs</key>
-	<dict>
-		<key>cedar</key>
-		<string>$(CEDAR_BASE_URL)</string>
-		<key>pine</key>
-		<string>$(PINE_BASE_URL)</string>
-		<key>redwood</key>
-		<string>$(REDWOOD_BASE_URL)</string>
-	</dict>
-	<key>FirebaseAutomaticScreenReportingEnabled</key>
-	<false/>
-	<key>ITSAppUsesNonExemptEncryption</key>
-	<false/>
-	<key>LSApplicationCategoryType</key>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
+	<key>NSPrincipalClass</key>
 	<string></string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>dbapi-1</string>
-		<string>dbapi-3</string>
-	</array>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSExceptionDomains</key>
-		<dict>
-			<key>canvas.docker</key>
-			<dict>
-				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<true/>
-			</dict>
-			<key>localhost</key>
-			<dict>
-				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<true/>
-			</dict>
-		</dict>
-	</dict>
-	<key>NSCameraUsageDescription</key>
-	<string>Using</string>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>Attach audio recordings to messages and discussion posts or turn them in as assignment submissions.</string>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Frameworks/Core.framework/lato_italic.ttf</string>
-		<string>Frameworks/Core.framework/lato_bolditalic.ttf</string>
-		<string>Frameworks/Core.framework/lato_black.ttf</string>
-		<string>Frameworks/Core.framework/lato_bold.ttf</string>
-		<string>Frameworks/Core.framework/lato_regular.ttf</string>
-		<string>Frameworks/Core.framework/balsamiq_regular.ttf</string>
-		<string>Frameworks/Core.framework/balsamiq_bold.ttf</string>
-		<string>Frameworks/Core.framework/lato_semibold.ttf</string>
-		<string>Frameworks/Core.framework/lato-semibolditalic.ttf</string>
-	</array>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-		<string>processing</string>
-	</array>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIPrerenderedIcon</key>
-	<true/>
-	<key>UIRequiresFullScreen</key>
-	<false/>
-	<key>UIStatusBarStyle</key>
-	<string>UIStatusBarStyleDefault</string>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UIUserInterfaceStyle</key>
-	<string>Light</string>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
-	<key>VersionName</key>
-	<string>Innovative Panda</string>
 </dict>
 </plist>
