--- a/Horizon/Horizon/horizon.yml
+++ b/Horizon/Horizon/horizon.yml
@@ -1,14 +1,13 @@
 ---
 targets:
   Horizon:
-    type: application
+    type: framework
     platform: iOS
     transitivelyLinkDependencies: false
     settings:
       APPLICATION_EXTENSION_API_ONLY: false
       SWIFT_EMIT_LOC_STRINGS: true
       PRODUCT_BUNDLE_IDENTIFIER: com.instructure.horizon
-      INFOPLIST_FILE: Horizon/Resources/Info.plist
       TARGETED_DEVICE_FAMILY: 1,2
     sources:
       - path: ./
