--- a/Horizon/project-ci.yml
+++ b/Horizon/project-ci.yml
@@ -18,7 +18,7 @@ sources:
       - ".swiftlint.yml"
   - path: ../packages
 include:
-  - Horizon/Horizon.yml
+  - Horizon/horizon.yml
 projectReferences:
   Core:
     path: ../Core/Core.xcodeproj
