--- a/Student/Widgets/student-widgets.yml
+++ b/Student/Widgets/student-widgets.yml
@@ -12,12 +12,28 @@ targets:
       INFOPLIST_FILE: Widgets/Resources/Info.plist
       CODE_SIGN_ENTITLEMENTS: Widgets/Resources/Widgets.entitlements
       TARGETED_DEVICE_FAMILY: 1,2
+      DEBUG_INFORMATION_FORMAT: "dwarf-with-dsym"
+      ENABLE_DEBUG_DYLIB: false
     sources:
       - path: ./
         excludes:
           - ".swiftlint.yml"
     dependencies:
       - target: Core/Core
+      - package: FirebaseCrashlytics
+      - package: FirebaseRemoteConfig
+      - package: FirebaseRemoteConfigSwift
+    postBuildScripts:
+      - script: "\"${BUILD_DIR%/Build/*}/SourcePackages/checkouts/firebase-ios-sdk/Crashlytics/run\""
+        name: Upload dSYMs to Firebase
+        basedOnDependencyAnalysis: false
+        inputFiles:
+          - ${DWARF_DSYM_FOLDER_PATH}/${DWARF_DSYM_FILE_NAME}
+          - ${DWARF_DSYM_FOLDER_PATH}/${DWARF_DSYM_FILE_NAME}/Contents/Resources/DWARF/${PRODUCT_NAME}
+          - ${DWARF_DSYM_FOLDER_PATH}/${DWARF_DSYM_FILE_NAME}/Contents/Info.plist
+          - ${DWARF_DSYM_FOLDER_PATH}/${DWARF_DSYM_FILE_NAME}/Contents/Resources/DWARF/${PRODUCT_NAME}.debug.dylib
+          - $(TARGET_BUILD_DIR)/$(UNLOCALIZED_RESOURCES_FOLDER_PATH)/GoogleService-Info.plist
+          - $(TARGET_BUILD_DIR)/$(EXECUTABLE_PATH)
 schemes:
   Widgets - Announcements:
     build:
