Remove any previous ipa's before building a target.

--- a/.bitrise/pr_adhoc/workflow_pr_adhoc_build.yml
+++ b/.bitrise/pr_adhoc/workflow_pr_adhoc_build.yml
@@ -5,6 +5,21 @@ workflows:
     summary: This workflow stamps the app icon and creates a QR code installable ad-hoc build used for pull request testing.
     description: "This step expects the following environment variables: \n$INST_XCODE_SCHEME (e.g., Student)\n$INST_XCODE_APPICON_PATH (e.g., Student/Student/Assets.xcassets/AppIcon.appiconset)\n\nThe output will be a file with the name ${INST_XCODE_SCHEME}_qr_url that will contain the image url of the QR code pointing to the created application. The file is needed because we can't export environment variables in case the workflow is run via the Bitrise Run step."
     steps:
+    - script@1:
+        inputs:
+        - content: |-
+            #!/usr/bin/env bash
+            # fail if any commands fails
+            set -e
+            # make pipelines' return status equal the last command to exit with a non-zero status, or zero if all commands exit successfully
+            set -o pipefail
+            # debug log
+            set -x
+
+            # Clear deploy directory to avoid conflicts with previous builds
+            rm -f "$BITRISE_DEPLOY_DIR"/*.ipa
+            echo "Cleared deploy directory of any existing IPA files"
+        title: Clear Deploy Directory
     - set-xcode-build-number@2:
         inputs:
         - scheme: $INST_XCODE_SCHEME
