--- a/.bitrise/pr_adhoc/workflow_pr_adhoc_builds.yml
+++ b/.bitrise/pr_adhoc/workflow_pr_adhoc_builds.yml
@@ -4,7 +4,7 @@ include:
   - path: .bitrise/pr_adhoc/workflow_pr_adhoc_build.yml
 workflows:
   pr_adhoc_builds:
-    status_report_name: Ad-Hoc Builds
+    status_report_name: ad-hoc builds
     after_run:
     - _common_save_spm_cache
     before_run:
