Liquid Glass opt-out refs: MBL-19112 affects: Student, Parent, Teacher release note: none

--- a/Student/Student/Info.plist
+++ b/Student/Student/Info.plist
@@ -141,6 +141,8 @@
 		<string>audio</string>
 		<string>processing</string>
 	</array>
+	<key>UIDesignRequiresCompatibility</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIPrerenderedIcon</key>
