--- a/Parent/Parent/Info.plist
+++ b/Parent/Parent/Info.plist
@@ -94,6 +94,8 @@
 		<string>Frameworks/Core.framework/lato_bolditalic.ttf</string>
 		<string>Frameworks/Core.framework/lato_regular.ttf</string>
 	</array>
+	<key>UIDesignRequiresCompatibility</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
