Correct bundle ID

--- a/Teacher/project.yml
+++ b/Teacher/project.yml
@@ -3,7 +3,7 @@ name: Teacher
 attributes: { LastUpgradeCheck: "1600" }
 options:
   groupSortPosition: top
-  bundleIdPrefix: com.instructure.teacherapp
+  bundleIdPrefix: com.instructure.ios.teacher
   deploymentTarget:
     iOS: 17.0
   createIntermediateGroups: true
