--- a/.bitrise/bitrise.yml
+++ b/.bitrise/bitrise.yml
@@ -25,16 +25,10 @@ workflows:
     - git-clone:
         inputs:
         - reset_repository: 'Yes'
-    - script:
-        inputs:
-        - content: |-
-            #!/usr/bin/env bash
-            sudo systemsetup -settimezone America/Denver
-        title: Update timezone to MST
     - git::git@github.com:instructure/steps-canvas-ios-secrets.git@master:
         title: Canvas iOS Secrets
     - script@1:
-        title: Install XcodeGen
+        title: XcodeGen
         inputs:
         - content: |-
             #!/usr/bin/env bash
@@ -45,33 +39,13 @@ workflows:
 
             cd $BITRISE_SOURCE_DIR
             make provision-ci
-    - script@1:
-        title: Run make sync
-        inputs:
-        - content: |-
-            #!/usr/bin/env bash
-            # fail if any commands fails
-            set -ex
-            # make pipelines' return status equal the last command to exit with a non-zero status, or zero if all commands exit successfully
-            set -o pipefail
-
-            cd $BITRISE_SOURCE_DIR
             make sync-ci
-    - restore-spm-cache@2: {}
     summary: 'This step contains all the necessary steps to prepare the Xcode workspace
       for building/testing.'
-  _common_save_spm_cache:
-    steps:
-    - save-spm-cache@1:
-        inputs:
-        - compression_level: 1
-    summary: This workflow's only task is to save resolved SPM dependencies to the
-      cache to be re-used later by other workflows (mainly the _common_prepare_workspace
-      one).
 meta:
   bitrise.io:
     machine_type_id: g2.mac.medium
-    stack: osx-xcode-16.2.x
+    stack: osx-xcode-16.4.x
 app:
   envs:
   - BITRISE_PROJECT_PATH: Canvas.xcworkspace
