--- a/Parent/Parent/parent.yml
+++ b/Parent/Parent/parent.yml
@@ -23,6 +23,7 @@ targets:
       - package: FirebaseRemoteConfig
       - package: FirebaseRemoteConfigSwift
       - target: Core/Core
+      - target: Horizon/Horizon
     preBuildScripts:
       - path: ../../scripts/xcode-build-phases/swiftLint.sh
         name: SwiftLint
