--- a/Parent/Parent/parent.yml
+++ b/Parent/Parent/parent.yml
@@ -23,7 +23,7 @@ targets:
       - package: FirebaseRemoteConfig
       - package: FirebaseRemoteConfigSwift
       - target: Core/Core
-      - target: Horizon/Horizon
+#      - target: Horizon/Horizon
     preBuildScripts:
       - path: ../../scripts/xcode-build-phases/swiftLint.sh
         name: SwiftLint
@@ -54,4 +54,4 @@ schemes:
         - name: Core/CoreTester
           skipped: true
       gatherCoverageData: true
-      coverageTargets: [Core/Core, Parent]
+      coverageTargets: [Core/Core, Parent, Core/TestsFoundation]
