--- a/Parent/project-ci.yml
+++ b/Parent/project-ci.yml
@@ -25,8 +25,8 @@ include:
 projectReferences:
   Core:
     path: ../Core/Core.xcodeproj
-  Horizon:
-    path: ../Horizon/Horizon.xcodeproj
+#  Horizon:
+#    path: ../Horizon/Horizon.xcodeproj
 packages:
   Pendo:
     url: https://github.com/pendo-io/pendo-mobile-sdk
