--- a/Teacher/TeacherTests/teacher-tests.yml
+++ b/Teacher/TeacherTests/teacher-tests.yml
@@ -13,5 +13,6 @@ targets:
           - ".swiftlint.yml"
     dependencies:
       - target: Teacher
+      - target: Core/TestsFoundation
       - package: FirebaseRemoteConfig
       - package: FirebaseCrashlytics
