Correct e2e test target

--- a/Teacher/TeacherE2ETests/teacher-e2e-tests.yml
+++ b/Teacher/TeacherE2ETests/teacher-e2e-tests.yml
@@ -5,7 +5,7 @@ targets:
     platform: iOS
     settings:
       ENABLE_TESTABILITY: true
-      TEST_TARGET_NAME: Student
+      TEST_TARGET_NAME: Teacher
     sources:
       - path: ./
         excludes:
