refs: CLX-2815 affects: Student release note: Fixing a bug builds: student
Adding the HorizonUnitTest testing target

--- a/Horizon/project.yml
+++ b/Horizon/project.yml
@@ -22,6 +22,7 @@ sources:
   - path: ../packages
 include:
   - Horizon/horizon.yml
+  - HorizonTests/horizon-unit-tests.yml
 projectReferences:
   Core:
     path: ../Core/Core.xcodeproj
