--- a/Horizon/project.yml
+++ b/Horizon/project.yml
@@ -22,6 +22,7 @@ sources:
   - path: ../packages
 include:
   - Horizon/horizon.yml
+  - HorizonUnitTests/horizon-unit-tests.yml
 projectReferences:
   Core:
     path: ../Core/Core.xcodeproj
