--- a/Student/Student/Info.plist
+++ b/Student/Student/Info.plist
@@ -66,6 +66,16 @@
 				<string>pendo-889d43f7</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>pendo-pairing-clx</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>pendo-9f913bef</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
