--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,8 +4,8 @@
 # More details are here: https://help.github.com/articles/about-codeowners/
 
 # These owners will be the default owners for everything in the repo.
-* @vargaat @szabinst @rh12 @ndrsszsz @suhaibabsi-inst
+* @vargaat @rh12 @suhaibabsi-inst
 
 # Horizon
-/Horizon/ @szabinst @ktheory @JacksonHowe @Ahmed-Naguib93 @reabbotted
-/packages/HorizonUI @szabinst @ktheory @JacksonHowe @Ahmed-Naguib93 @reabbotted
+/Horizon/ @szabinst @ktheory @JacksonHowe @Ahmed-Naguib93
+/packages/HorizonUI @szabinst @ktheory @JacksonHowe @Ahmed-Naguib93
