Add swiftlint rule for XCTAssert E2E helper methods.

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -39,3 +39,14 @@ type_name:
 
 trailing_comma:
   mandatory_comma: false
+
+custom_rules:
+  prefer_helper_assertions:
+    name: "Prefer Helper Assertions"
+    message: "Use XCTAssertVisible/XCTAssertNotVisible for .isVisible or XCTAssertSelected/XCTAssertNotSelected for .isSelected instead of XCTAssertTrue/XCTAssertFalse"
+    regex: 'XCTAssert(True|False)\s*\(\s*([a-zA-Z_][a-zA-Z0-9_]*)\s*\.\s*(isVisible|isSelected)(?:\s*,|\s*\))'
+    included:
+      - ".*E2ETests/.*\\.swift"
+    match_kinds:
+      - identifier
+    severity: warning
