--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -44,9 +44,7 @@ custom_rules:
   prefer_helper_assertions:
     name: "Prefer Helper Assertions"
     message: "Use XCTAssertVisible/XCTAssertNotVisible for .isVisible or XCTAssertSelected/XCTAssertNotSelected for .isSelected instead of XCTAssertTrue/XCTAssertFalse"
-    regex: 'XCTAssert(?:True|False)\s*\(.*\.is(?:Visible|Selected)\s*(?:,.*?)?\)'
+    regex: 'XCTAssert(?:True|False)\([^\n]*?\.is(?:Visible|Selected)\s*\)'
     included:
       - ".*E2ETests/.*\\.swift"
-    match_kinds:
-      - identifier
     severity: warning
