feat: add SnapshotTesting lib

--- a/Horizon/Horizon/horizon.yml
+++ b/Horizon/Horizon/horizon.yml
@@ -34,3 +34,7 @@ schemes:
     build:
       targets:
         Horizon: all
+    test:
+      targets:
+        - HorizonSnapshotTests
+        - HorizonUnitTests
