--- a/Teacher/project.yml
+++ b/Teacher/project.yml
@@ -7,6 +7,9 @@ options:
   deploymentTarget:
     iOS: 17.0
   createIntermediateGroups: true
+  fileTypes:
+    "icon":
+      file: true
 settings:
   CODE_SIGN_STYLE: Automatic ## This line is removed in the project-ci.yml file so Bitrise can manage code sign.
   DEVELOPMENT_TEAM: B6333T4PXQ ## This line is removed in the project-ci.yml file so Bitrise can manage code sign.
