--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -39,3 +39,12 @@ type_name:
 
 trailing_comma:
   mandatory_comma: false
+
+custom_rules:
+  prefer_helper_assertions:
+    name: "Prefer Helper Assertions"
+    message: "Use XCTAssertVisible/XCTAssertNotVisible for .isVisible or XCTAssertSelected/XCTAssertNotSelected for .isSelected instead of XCTAssertTrue/XCTAssertFalse"
+    regex: 'XCTAssert(?:True|False)\([^\n]*?\.is(?:Visible|Selected)\s*\)'
+    included:
+      - ".*E2ETests/.*\\.swift"
+    severity: warning
